objects/zkups__UPSCommodityJunction__c.object
<CustomObject>
    <description>UPS Commodity Junction is a junction object that links International Commodities to Shipments</description>
    <fields>
        <fullName>zkups__AllowRecordDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__Description__c</fullName>
        <label>Description</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__UPSInternationalCommodity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPS International Commodity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zkups__UPSInternationalCommodity__c.zkups__Deactivated__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zkups__UPSInternationalCommodity__c</referenceTo>
        <relationshipLabel>UPS Commodity Junctions</relationshipLabel>
        <relationshipName>UPSCommodityJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__UPSShipment__c</fullName>
        <label>UPS Shipment</label>
        <referenceTo>zkups__UPSShipment__c</referenceTo>
        <relationshipLabel>UPS Commodities</relationshipLabel>
        <relationshipName>UPS_Commodity_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkups__UnitValue__c</fullName>
        <label>Price Per Unit</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkups__Weight__c</fullName>
        <label>Weight</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>UPS Commodity Junction</label>
    <nameField>
        <label>UPS Commodity Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPS Commodity Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>